--- a/Examples/BingX.Examples.Api/BingX.Examples.Api.csproj
+++ b/Examples/BingX.Examples.Api/BingX.Examples.Api.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="TODO.Net" Version="3.5.2" />
+    <PackageReference Include="BingX.Net" Version="1.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
