--- a/Examples/BingX.Examples.Console/BingX.Examples.Console.csproj
+++ b/Examples/BingX.Examples.Console/BingX.Examples.Console.csproj
@@ -2,13 +2,13 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="BingX.Net" Version="1.0.0" />
+    <PackageReference Include="JK.BingX.Net" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
