--- a/BingX.Net/BingX.Net.csproj
+++ b/BingX.Net/BingX.Net.csproj
@@ -12,7 +12,7 @@
     <FileVersion>1.21.0</FileVersion>
     <Description>JK.BingX.Net is a client library for accessing the BingX REST and Websocket API. All data is mapped to readable models and enum values. Additional features include automatic websocket (re)connection management, client side rate limiting, an implementation for maintaining a client side order book, easy integration with other exchange client libraries and more.</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageTags>BingX;BingX.Net;BingX Client;BingX API;CryptoCurrency;CryptoCurrency Exchange</PackageTags>
+    <PackageTags>BingX;BingX.Net;BingX.com;BingX Client;BingX API;CryptoCurrency;CryptoCurrency Exchange</PackageTags>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/JKorf/BingX.Net.git</RepositoryUrl>
     <PackageProjectUrl>https://github.com/JKorf/BingX.Net</PackageProjectUrl>
